package command;

public interface Command {
    void ejecutar();
    void deshacer();
}
